--- a/assets/css/custom.sass
+++ b/assets/css/custom.sass
@@ -1,6 +1,7 @@
 $primary: #02d35f
 $secondary: #0d2c40
-
+pre
+  color: #c9d1d9
 body
   background-color: #0d1117
 
@@ -22,4 +23,22 @@ a, a:hover, a:active, a:focus, a:visited
   max-width: 30px
 .bg-dark
   background-color: #161b22 !important
-
+.card, .list-group-item, .nav-tabs, .nav-tabs .nav-link:hover
+  background-color: transparent !important
+  border-color: #30363d
+.nav-tabs
+  a
+    color: #8b949e
+  .nuxt-link-active
+    color: #c9d1d9
+.list-group-item-action
+  color: #c9d1d9
+.login
+  margin: 0 auto
+  min-height: 100vh
+  display: flex
+  justify-content: center
+  align-items: center
+  text-align: center
+  .logo
+    max-height: 150px
