--- a/assets/css/custom.sass
+++ b/assets/css/custom.sass
@@ -1,5 +1,7 @@
 $primary: #02d35f
 $secondary: #0d2c40
+$dark: #161b22
+$black: #0d1117
 pre
   color: #c9d1d9
 body
@@ -18,11 +20,17 @@ a, a:hover, a:active, a:focus, a:visited
 .main
   background-color: #0d1117
   color: #c9d1d9
+.min-h-screen
+  min-height: 100vh
+.overflow-x-scroll
+  overflow-x: scroll
 
 .thumb-sm
   max-width: 30px
+.bg-black
+  background-color: $black !important
 .bg-dark
-  background-color: #161b22 !important
+  background-color: $dark !important
 .card, .list-group-item, .nav-tabs, .nav-tabs .nav-link:hover
   background-color: transparent !important
   border-color: #30363d
