Add Projects page

--- a/assets/css/custom.sass
+++ b/assets/css/custom.sass
@@ -10,6 +10,8 @@ body
 a, a:hover, a:active, a:focus, a:visited
   text-decoration: none
   cursor: pointer
+.btn
+  margin-right: 5px
 .btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:focus, .btn-primary:visited
   background-color: $primary !important
   border-color: $primary !important
