--- a/assets/css/custom.sass
+++ b/assets/css/custom.sass
@@ -10,6 +10,9 @@ body
 a, a:hover, a:active, a:focus, a:visited
   text-decoration: none
   cursor: pointer
+h4
+  .b-icon
+    font-size: 16px
 .btn
   margin-right: 5px
 .btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:focus, .btn-primary:visited
@@ -17,6 +20,11 @@ a, a:hover, a:active, a:focus, a:visited
   border-color: $primary !important
   box-shadow: none !important
   color: $secondary
+.btn-dark, .btn-dark:hover, .btn-dark:active, .btn-dark:focus, .btn-dark:visited
+  background-color: $dark !important
+  border-color: $dark !important
+  box-shadow: none !important
+  color: #c9d1d9
 .logo
   max-height: 75px
 .main
