--- a/assets/css/custom.sass
+++ b/assets/css/custom.sass
@@ -2,10 +2,14 @@ $primary: #02d35f
 $secondary: #0d2c40
 $dark: #161b22
 $black: #0d1117
+$gray1: #30363d
+$gray2: #8b949e
+$gray3: #c9d1d9
+
 pre
-  color: #c9d1d9
+  color: $gray3
 body
-  background-color: #0d1117
+  background-color: $black
 
 a, a:hover, a:active, a:focus, a:visited
   text-decoration: none
@@ -24,12 +28,24 @@ h4
   background-color: $dark !important
   border-color: $dark !important
   box-shadow: none !important
-  color: #c9d1d9
+  color: $gray3
+.btn-black, .btn-black:hover, .btn-black:active, .btn-black:focus, .btn-black:visited
+  background-color: $black !important
+  border-color: $black !important
+  box-shadow: none !important
+  color: $gray3
+.btn-outline, .btn-outline:hover, .btn-outline:active, .btn-outline:focus, .btn-outline:visited
+  background-color: transparent !important
+  border-color: transparent !important
+  box-shadow: none !important
+  color: $gray3
+  border: 1px solid $gray1 !important
+
 .logo
   max-height: 75px
 .main
-  background-color: #0d1117
-  color: #c9d1d9
+  background-color: $black
+  color: $gray3
 .min-h-screen
   min-height: 100vh
 .overflow-x-scroll
@@ -41,16 +57,19 @@ h4
   background-color: $black !important
 .bg-dark
   background-color: $dark !important
-.card, .list-group-item, .nav-tabs, .nav-tabs .nav-link:hover
+.card, .list-group-item, .nav-tabs, .nav-tabs .nav-link.nuxt-link-active
   background-color: transparent !important
-  border-color: #30363d
+  border-color: $gray1
 .nav-tabs
+  .nav-link:not(.nuxt-link-active)
+    &:hover, &:focus
+      border: 1px solid transparent
   a
-    color: #8b949e
+    color: $gray2
   .nuxt-link-active
-    color: #c9d1d9
+    color: $gray3
 .list-group-item-action
-  color: #c9d1d9
+  color: $gray3
 .login
   margin: 0 auto
   min-height: 100vh
@@ -60,3 +79,27 @@ h4
   text-align: center
   .logo
     max-height: 150px
+.ghost-card
+  opacity: 0.5
+  background-color: $gray1
+.kanban
+  width: 100%
+  .column
+    min-width: 340px
+    width: 25%
+    & > div
+      min-height: calc(100% - 16px)
+  .kanban-card
+    border-color: $gray2 !important
+    font-size: 14px
+    .btn
+      margin-right: 0
+.modal-content
+  border-radius: 7px
+  .modal-header
+    background-color: $dark
+    color: $gray3
+    .close
+      color: $gray3
+  pre
+    color: $black
