Add comments to cards

--- a/assets/css/custom.sass
+++ b/assets/css/custom.sass
@@ -17,6 +17,8 @@ a, a:hover, a:active, a:focus, a:visited
 h4
   .b-icon
     font-size: 16px
+hr
+  border-color: $gray1
 .btn
   margin-right: 5px
 .btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:focus, .btn-primary:visited
