Adiciona controle de membros do card

--- a/assets/css/custom.sass
+++ b/assets/css/custom.sass
@@ -105,3 +105,8 @@ hr
       color: $gray3
   pre
     color: $black
+.members-select
+  .b-avatar
+    border: 2px solid $primary
+    &.inactive
+      filter: grayscale(1)
