Adiciona link para o card. Adiciona melhorias gerais nos cards e no formulário do card

--- a/assets/css/custom.sass
+++ b/assets/css/custom.sass
@@ -20,6 +20,8 @@ h4
     font-size: 16px
 hr
   border-color: $gray1
+.pointer
+  cursor: pointer
 .btn
   margin-right: 5px
 .btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:focus, .btn-primary:visited
